syntax = "proto3";
package spec;
option go_package = "github.com/berops/claudie/proto/pb/spec";

message GCPProvider {
  string key = 1;
  string project = 2;
}

message HetznerProvider {
  string token = 1;
}

message HetznerDNSProvider {
  string token = 1;
}

message OCIProvider {
  string userOCID = 1;
  string tenancyOCID = 2;
  string keyFingerprint = 3;
  string compartmentOCID = 4;
  string privateKey = 5;
}

message AWSProvider {
  string secretKey = 1;
  string accessKey = 2;
}

message AzureProvider {
  string subscriptionID = 1;
  string tenantID = 2;
  string clientID = 3;
  string clientSecret = 4;
}

message CloudflareProvider {
  string token = 1;
  string accountID = 2;
}

message GenesisCloudProvider {
  string token = 1;
}

message Provider {
  string specName = 1;
  string cloudProviderName = 2;

  oneof ProviderType {
    GCPProvider gcp = 3;
    HetznerProvider hetzner = 4;
    HetznerDNSProvider hetznerdns = 5;
    OCIProvider oci = 6;
    AWSProvider aws = 7;
    AzureProvider azure = 8;
    CloudflareProvider cloudflare = 9;
    GenesisCloudProvider genesiscloud = 10;
  }

  TemplateRepository templates = 13;
}

message TemplateRepository {
  string repository = 1;
  optional string tag = 2;
  string path = 3;

  string commitHash = 4;
}
